# pyptvdata

./: .gitignore  README.md  pyproject.toml
pyptvdata/: apiv3.py  const.py  gtfs.py  gtfsr.py
pyptvdata/apiv3/: definitions.json  paths.json  types.py
scripts/: gen-dataclass.py  swagger-codegen.py
