[tool.poetry]
name = "pyptvdata"
version = "0.1.0"
description = ""
authors = ["thanhan910 <63280785+thanhan910@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
pandas = "^2.2.1"
gtfs-realtime-bindings = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
